@@ -1,6 +1,8 @@
 0.12.0
 ------
 
+* Added Row.compute method to parallel Column.aggregate. (#280)
+* Computation.prepare is now private and invoked automatically. (#280)
 * Table now supports variable-length rows during construction. (#39)
 * aggregations.Summary implemented for generic aggregations. (#181)
 * Fix TableSet.key_type being lost after proxying Table methods. (#278)
